{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 409,
  "lineage": "5deb0f9d-fc63-c311-4372-22333c4d679d",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ffa0b41b3d87e9da",
            "domain": "vpc",
            "id": "eipalloc-0ffa0b41b3d87e9da",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-116-130-45.us-east-2.compute.amazonaws.com",
            "public_ip": "18.116.130.45",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:633489328820:internet-gateway/igw-0b0f8468116a58e51",
            "id": "igw-0b0f8468116a58e51",
            "owner_id": "633489328820",
            "tags": {
              "Name": "abs-igw"
            },
            "tags_all": {
              "Name": "abs-igw"
            },
            "vpc_id": "vpc-0fb62c60e51fbc398"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ffa0b41b3d87e9da",
            "association_id": "eipassoc-0aa5e818906e677a8",
            "connectivity_type": "public",
            "id": "nat-06b1a29ff92c73485",
            "network_interface_id": "eni-066e2d1f05f0b4adf",
            "private_ip": "10.0.2.88",
            "public_ip": "18.116.130.45",
            "subnet_id": "subnet-045d639e09d676900",
            "tags": {
              "Name": "NAT Gateway"
            },
            "tags_all": {
              "Name": "NAT Gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_subnet.private_app_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_app_subnet_az1_nat_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-082d0146c44e833f11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06b1a29ff92c73485",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-082d0146c44e833f1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_app_subnet_az1",
            "module.vpc.aws_subnet.private_app_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_app_subnet_az2_nat_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c120cc6fa4fc4d7b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06b1a29ff92c73485",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c120cc6fa4fc4d7b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_app_subnet_az2",
            "module.vpc.aws_subnet.private_app_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_data_subnet_az1_nat_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0734bf8008b02dbb31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06b1a29ff92c73485",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0734bf8008b02dbb3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_data_subnet_az1",
            "module.vpc.aws_subnet.private_app_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_data_subnet_az2_nat_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e19b0ea3a5438a331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06b1a29ff92c73485",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e19b0ea3a5438a33",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_data_subnet_az2",
            "module.vpc.aws_subnet.private_app_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:633489328820:route-table/rtb-082d0146c44e833f1",
            "id": "rtb-082d0146c44e833f1",
            "owner_id": "633489328820",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private App Subnet AZ1 Route Table"
            },
            "tags_all": {
              "Name": "Private App Subnet AZ1 Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb62c60e51fbc398"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:633489328820:route-table/rtb-0c120cc6fa4fc4d7b",
            "id": "rtb-0c120cc6fa4fc4d7b",
            "owner_id": "633489328820",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private App Subnet AZ2 Route Table"
            },
            "tags_all": {
              "Name": "Private App Subnet AZ2 Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb62c60e51fbc398"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_data_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:633489328820:route-table/rtb-0734bf8008b02dbb3",
            "id": "rtb-0734bf8008b02dbb3",
            "owner_id": "633489328820",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private data Subnet AZ1 Route Table"
            },
            "tags_all": {
              "Name": "Private data Subnet AZ1 Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb62c60e51fbc398"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_data_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:633489328820:route-table/rtb-0e19b0ea3a5438a33",
            "id": "rtb-0e19b0ea3a5438a33",
            "owner_id": "633489328820",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private data Subnet AZ2 Route Table"
            },
            "tags_all": {
              "Name": "Private data Subnet AZ2 Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb62c60e51fbc398"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:633489328820:route-table/rtb-039fae1b1c08693d3",
            "id": "rtb-039fae1b1c08693d3",
            "owner_id": "633489328820",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b0f8468116a58e51",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public route table"
            },
            "tags_all": {
              "Name": "public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb62c60e51fbc398"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_subnet_az1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b29bb6a0437c12e7",
            "route_table_id": "rtb-082d0146c44e833f1",
            "subnet_id": "subnet-045d639e09d676900"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_app_subnet_az1",
            "module.vpc.aws_subnet.private_app_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_subnet_az2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090c27c9450796df1",
            "route_table_id": "rtb-0c120cc6fa4fc4d7b",
            "subnet_id": "subnet-0ba04e44e2f6a2063"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_app_subnet_az2",
            "module.vpc.aws_subnet.private_app_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_data_subnet_az1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045612e2a25811e79",
            "route_table_id": "rtb-0734bf8008b02dbb3",
            "subnet_id": "subnet-0a4cf420eb2291521"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_data_subnet_az1",
            "module.vpc.aws_subnet.private_data_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_data_subnet_az2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ed673e35b08fbeb",
            "route_table_id": "rtb-0e19b0ea3a5438a33",
            "subnet_id": "subnet-0e1c1778178f2d6e4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_data_subnet_az2",
            "module.vpc.aws_subnet.private_data_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az1_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0125ea6bf72a551af",
            "route_table_id": "rtb-039fae1b1c08693d3",
            "subnet_id": "subnet-00b0e0b06e477890b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az2_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9e7bdab1451ee2f",
            "route_table_id": "rtb-039fae1b1c08693d3",
            "subnet_id": "subnet-0aba27f71a1777a33"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:633489328820:security-group/sg-091789c65ec3eba16",
            "description": "vpc security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091789c65ec3eba16",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "vpc-security-group",
            "name_prefix": "",
            "owner_id": "633489328820",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fb62c60e51fbc398"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:633489328820:subnet/subnet-045d639e09d676900",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045d639e09d676900",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633489328820",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_app_subnet_az1_abs"
            },
            "tags_all": {
              "Name": "private_app_subnet_az1_abs"
            },
            "vpc_id": "vpc-0fb62c60e51fbc398"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:633489328820:subnet/subnet-0ba04e44e2f6a2063",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba04e44e2f6a2063",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633489328820",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_app_subnet_az2_abs"
            },
            "tags_all": {
              "Name": "private_app_subnet_az2_abs"
            },
            "vpc_id": "vpc-0fb62c60e51fbc398"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:633489328820:subnet/subnet-0a4cf420eb2291521",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4cf420eb2291521",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633489328820",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_data_subnet_az1_abs"
            },
            "tags_all": {
              "Name": "private_data_subnet_az1_abs"
            },
            "vpc_id": "vpc-0fb62c60e51fbc398"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:633489328820:subnet/subnet-0e1c1778178f2d6e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1c1778178f2d6e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633489328820",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_data_subnet_az2_abs"
            },
            "tags_all": {
              "Name": "private_data_subnet_az2_abs"
            },
            "vpc_id": "vpc-0fb62c60e51fbc398"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:633489328820:subnet/subnet-00b0e0b06e477890b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b0e0b06e477890b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "633489328820",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_az1_abs"
            },
            "tags_all": {
              "Name": "public_subnet_az1_abs"
            },
            "vpc_id": "vpc-0fb62c60e51fbc398"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:633489328820:subnet/subnet-0aba27f71a1777a33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aba27f71a1777a33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "633489328820",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_az2_abs"
            },
            "tags_all": {
              "Name": "public_subnet_az2_abs"
            },
            "vpc_id": "vpc-0fb62c60e51fbc398"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:633489328820:vpc/vpc-0fb62c60e51fbc398",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01d48c85039f63e6f",
            "default_route_table_id": "rtb-0c4f7d0b55172ca40",
            "default_security_group_id": "sg-086eaa04f243c389b",
            "dhcp_options_id": "dopt-9e2141f5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fb62c60e51fbc398",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c4f7d0b55172ca40",
            "owner_id": "633489328820",
            "tags": {
              "Name": "abs-vpc"
            },
            "tags_all": {
              "Name": "abs-vpc"
            }
          }
        }
      ]
    }
  ]
}